--- a/aurora-client/src/main/resources/aurora-scheduler.properties
+++ b/aurora-client/src/main/resources/aurora-scheduler.properties
@@ -5,3 +5,5 @@ aurora.scheduler.host=mesos-master-1
 aurora.scheduler.port=8081
 
 aurora.executor.name=AuroraExecutor
+
+mesos.cluster.name=example
